# rgb_thermal_sync

./: .gitignore  README.md
bfly_ws/launch/: bfs_capture.launch.py
bfly_ws/src/: bfs_trigger_config.py  image_saver.py  main.c
boson_ws/src/: convert_to_png.py  hz_check.py  image_saver.py  image_saver_bkp.py
boson_ws/src/boson_splitter/: CMakeLists.txt  package.xml
boson_ws/src/boson_splitter/src/: boson_splitter_node.cpp
signalDivider/include/: main.h
signalDivider/src/: main.c
